--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "stable": "^0.1.8",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
