--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "exit 1;"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^9.0.11",
     "react-router-dom": "^6.6.1"
   }
 }
